kubernetes/apps/external/nas/photos/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    hajimari.io/icon: "clarity:picture-solid"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "850m"
    nginx.ingress.kubernetes.io/proxy-body-size: "850m"
    external-dns.alpha.kubernetes.io/target: ingress.${SECRET_DOMAIN}
    external-dns.alpha.kubernetes.io/hostname: &host "photos.${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/ttl: "120"
  name: external-ingress-photos
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: *host
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: photos
              port:
                number: 5443
  tls:
    - hosts:
      - *host
      secretName: wildcard-cert-tls
